# money-printer

./: .gitignore  leaderboard.json  main.py  postplan.md  preplan.md  pyproject.toml
algorithms/: strategy_08ec9142-75d6-4686-ac5b-13048efe2e00.py  strategy_16b3f5dd-382d-488c-a573-874a7bdce3c6.py  strategy_3332c683-0e30-48ec-81d5-0bcc36765e96.py  strategy_492d0bc1-dd71-44a6-8285-43635a518715.py  strategy_52dbbec1-0502-40cc-807d-5fa7b2a8b366.py  strategy_72dfe6cb-1c6f-4c25-8efb-e41900e1cfe2.py  strategy_81682d6e-b2e4-4f1b-95ec-8b452eae5b23.py  strategy_90021e26-fb7f-44d5-9b5a-ccd32598be2a.py  strategy_98bd05fa-761b-442d-8eda-0af950eb04ba.py  strategy_b014bf03-399e-42cc-9642-3e64e03f3934.py  strategy_bf363740-8084-4ef9-a58f-6236f936d6e3.py  strategy_c03f2093-ac20-4d7d-b5a0-90ab12d7dd56.py  strategy_eb985d81-d38f-428f-83bb-b53f883fa339.py  strategy_ee330d26-51cc-4ffb-8a4e-f60c5d931cef.py  strategy_fe3e98e6-a6bc-4ea2-951d-1581c8fcdb09.py
algorithms/test/: strategy_47b4e622-e5a4-4000-a833-c5b73327695e.py  strategy_90c10bd1-26bd-4058-8b6f-30778bc4e8ca.py
core/: algorithm_evolution.py  data_ingest.py  evaluation.py  llm.py  record.py
leaderboards/: leaderboard.json  leaderboard_test.json
plans/: plan.md
strategies/: test.md
